--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     padding-right: 8%;
     position: relative;
 
-    background-image: url(images/photo.png);
+    background-image: url(photo.png);
     background-size: 38%;
     background-repeat: no-repeat;
     background-position: 92% 100%;
