--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body{
 /*button css*/
 .btn{
     font-family: "Roboto", sans-serif;
-    font size: 16px;
+    font-size: 16px;
     font-weight: bold;
     background: #3d2ec6;
     width: 160px;
