--- a/style.css
+++ b/style.css
@@ -176,3 +176,17 @@ body{
     text-shadow: 2px 1px 2px #000000;
     transition: 200ms;
 }
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: rgb(220, 239, 255);
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(109, 133, 255);
+    border-radius: 100vw;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: hsl (120 100% 10% / 1);
+}
+
